fix: adjust scrollbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -378,11 +378,11 @@ a.circle-button:hover {
 .figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar {
   inline-size: calc(var(--line-feed) / 2);
   block-size: calc(var(--line-feed) / 2);
-  background-color: var(--gray-4);
+  background-color: var(--gray-8);
 }
 
 .figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar-thumb {
-  background-color: currentColor;
+  background-color: var(--gray-10);
 }
 
 @media not (min-width: 38rem) {
